# ocaml-swagger

./: swagger.opam
src/: swagger.atd
