opam-version: "1.2"
version: "0.2.1"
maintainer: "Andre Nathan <andre@hostnet.com.br>"
authors: ["Andre Nathan <andre@hostnet.com.br>"]
license: "MIT"
homepage: "https://github.com/andrenth/ocaml-swagger"
dev-repo: "https://github.com/andrenth/ocaml-swagger.git"
bug-reports: "https://github.com/andrenth/ocaml-swagger/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"     {build & >= "1.3"}
  "atdgen"   {>= "1.12.0"}
  "re"       {>= "1.7.3"}
  "yojson"   {>= "1.6.0"}
  "ppx_deriving_cmdliner"
]
available: [ ocaml-version >= "4.05.0" ]
synopsis: "Swagger 2.0 code generator for OCaml"
